<resources>
    <string name="app_name">Clean Notes</string>
    <string name="add_new_note">Add new note</string>
    <string name="create_note">Create Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="ok">OK</string>
    <string name="switch_layout">Switch layout</string>
    <string name="night_theme">Night theme</string>
    <string name="unnamed_note">Unnamed Note</string>
    <string name="deleted">Note deleted</string>
    <string name="undo">Undo</string>
    <string name="empty_notes">You don\'t have any notes.\nClick + to add one</string>
    <string name="edit_note">Edit Note</string>
    <string name="search">Search...</string>
</resources>